fixed stucking page and remove secret and current folder in autoindex

--- a/web/styles.css
+++ b/web/styles.css
@@ -10,14 +10,25 @@ body {
     background-color: #000000;
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	padding: 0px 50px 0px 50px;
+	height: 60px;
 }
 
 .logo {
-	height: 60px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.logo a {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.logo img:hover {
+	filter: brightness(70%);
 }
 
 .project-name {
@@ -104,4 +115,25 @@ tr.folder a::before {
 tr.file a::before {
     content: "\1F4C4"; 
     padding-right: 10px;
+}
+
+.error-code {
+	font-size: 160px;
+	font-weight: 900;
+}
+
+.error-image {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.error-image img {
+	height: 150px;
+	width: auto;
+}
+
+.error-message {
+	font-size: 30px;
+	font-weight: 900;
 }
